Add api/auth/forgot-password endpoint

--- a/services/auth/AuthService/Auth.Api/Content/PasswordResetTemplate.cshtml
+++ b/services/auth/AuthService/Auth.Api/Content/PasswordResetTemplate.cshtml
@@ -71,11 +71,11 @@
 <body>
 <div class="container">
     <img class="logo"
-         src="https://575a7af1-4b34-4307-b36d-071e950a1946.b-cdn.net/e/d102292f-da51-4034-af55-18b7ce0dbcb8/b7f047e4-df54-4156-95ce-145c575b17bf.png"
+         src="https://575a7af1-4b34-4307-b36d-071e950a1946.b-cdn.net/e/d102292f-da51-4034-af55-18b7ce0dbcb8/e00f3da9-77fd-40a2-b8ee-1e62b3cb0170.png"
          alt="Logo"/>
-    <h1>Confirm your account</h1>
-    <p>Please click the button below to confirm your email address and finish setting up your account.</p>
-    <a href="@Model" class="button">Confirm</a>
+    <h1>Reset your password</h1>
+    <p>Please click the button below to reset your password.</p>
+    <a href="@Model" class="button">Reset</a>
     <div class="footer">
         <strong>Mercibus</strong><br/>
         All rights reserved.
