--- a/app/src/index.css
+++ b/app/src/index.css
@@ -11,6 +11,8 @@ body {
   flex-direction: column;
   min-height: 100vh;
   justify-content: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @theme inline {
